@@ -1,6 +1,7 @@
 phpSysInfo 3.1.7
 
  - [ADD] Show CPU frequency max and min for Darwin (Mac OS X)
+ - [ADD] Show System Language and Code Page on Darwin (Mac OS X)
 
  - [UPD] Network interfaces infos and filesystems infos for FreeBSD
 
